--- a/bank.html
+++ b/bank.html
@@ -10,21 +10,21 @@
 </head>
 
 <body>
-    <h1 id="heading">This is my <span>Money Calculator</span></h1>
+    <h1 id="heading">This is my Own <span>Money Calculator</span></h1>
     <main>
         <section class="display-amount">
             <div class="depo-balance-withdraw">
                 <div class="Deposit">
                     <h1>Deposit</h1>
-                    <h2>$ <span id="deposit-total">00</span></h2>
+                    <h2>$<span id="deposit-total">00</span></h2>
                 </div>
                 <div class="balance">
                     <h1>Balance</h1>
-                    <h2>$ <span id="balance-total">500</span></h2>
+                    <h2>$<span id="balance-total">500</span></h2>
                 </div>
                 <div class="withdraw">
                     <h1>Withdraw</h1>
-                    <h2>$ <span id="withdraw-total">00</span></h2>
+                    <h2>$<span id="withdraw-total">00</span></h2>
                 </div>
             </div>
         </section>
